fix dropdown alignment again

--- a/src/outer.scss
+++ b/src/outer.scss
@@ -10,7 +10,7 @@ cmls-player {
 		display: none !important;
 	}
 	cmls-player-component {
-		display: inherit !important;
+		display: inline-block !important;
 	}
 }
 .cmls-player-mediaplayer {
