--- a/src/ui/style.scss
+++ b/src/ui/style.scss
@@ -126,7 +126,7 @@ button {
 	min-width: 200px;
 	max-width: 180px;
 
-	height: 60px;
+	height: 55px;
 	max-height: 100%;
 
 	padding: 5px;
@@ -344,7 +344,6 @@ button {
 		letter-spacing: 0.055em;
 		line-height: 1;
 		text-transform: uppercase;
-		margin-bottom: 1px;
 		opacity: 0.85;
 	}
 
